tests/baselines/reference/circularModuleImports.errors.txt
==== tests/cases/compiler/circularModuleImports.ts (4 errors) ====
    module M
     
    {
     
        import A = B;
        ~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
                   ~
!!! error TS2179: Unable to resolve module reference 'B'.
     
        import B = A;
        ~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
                   ~
!!! error TS2179: Unable to resolve module reference 'A'.
     
    }
    